2006.01.16
----------
- fixed problem with editing an Accession's Donation if the donations already 
exists
- fixed some problems with the Accession Infobox
- fixes for the message dialog in utils if they are opened before the gui
starts

2006.01.16
----------
- properly escape Species.sp_author and Species.
- fixed a problem if tag table couldn't be loaded then the global transaction
is invalidated and bauble can't be used
- move set_widget_value into utils, eventually need to change all the plugins
to use this one to be consisten


2005.01.07
----------
- think i finally fixed what was causing all the crashes, for some reason i was
unparenting widgets instead of removing them from their containers
- ready for 0.4.2, the real release of the 0.4.x series
- had to revert some changes in setup.py to make py2exe work for win32
- small fix for the libxml2/formatter problem


2005.01.04
----------
- some 'correctness' fixes, like giving dialogs parents if applicable
- forgot to package the 'tag' plugin which is a major feature for 0.4.x, yes 
i'm an idiot
- tweaks to the example xsl stylesheet in the formatter plugin 
(labels.xsl, larger_label.xsl)
- removed all signs of threading code, there's no going back
- the SpeciesMetaEditor now just uses the vbox from the glade file instead
of destroying the dialog it was graciously given by TableEditorDialog only to 
replace it by another dialog


2005.01.04
----------
- fixed bug where editing an existing SpeciesMeta would just create a new
one
- back to deleting dialogs instead of just hiding them
- abcd export and formatter wouldn't work if a Species SpeciesMeta was None


2005.01.03
----------
- did a terrible job packaging 0.4.0 and probably earlier version, should 
be better now
- results in the search view are now sorted alphabetically


2005.01.02
----------
- drastically improved csv export speed by about a million percent by 
using map()
- some fixes for win32, mostly works now
- ready for 0.4.0
- released 0.4.0